[gd_scene load_steps=23 format=2]

[ext_resource path="res://sprites/Martial Hero/Sprites/Jump.png" type="Texture" id=4]
[ext_resource path="res://sprites/Martial Hero/Sprites/Idle.png" type="Texture" id=6]
[ext_resource path="res://sprites/Martial Hero/Sprites/Fall.png" type="Texture" id=7]
[ext_resource path="res://skrypty/Player2.gd" type="Script" id=8]
[ext_resource path="res://sprites/Martial Hero/Sprites/Run.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.6248
height = 26.7449

[sub_resource type="Animation" id=2]
resource_name = "Fall"
length = 0.18
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.77
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Jump"
length = 0.17
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Run"
length = 0.77
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Fall"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Jump"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Run"

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachine" id=10]
states/Fall/node = SubResource( 6 )
states/Fall/position = Vector2( 718, 176 )
states/Idle/node = SubResource( 7 )
states/Idle/position = Vector2( 476, 169 )
states/Jump/node = SubResource( 8 )
states/Jump/position = Vector2( 592, 72 )
states/Run/node = SubResource( 9 )
states/Run/position = Vector2( 355, 59 )
transitions = [ "Idle", "Run", SubResource( 12 ), "Idle", "Jump", SubResource( 13 ), "Run", "Idle", SubResource( 14 ), "Jump", "Idle", SubResource( 15 ), "Idle", "Fall", SubResource( 16 ), "Fall", "Idle", SubResource( 17 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=11]

[node name="KinematicBody2D" type="KinematicBody2D"]
scale = Vector2( 1.3, 1.3 )
script = ExtResource( 8 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.19054, -2.97638 )
scale = Vector2( 1.3, 1.3 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.86441, 0 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 7 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/Fall = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Jump = SubResource( 4 )
anims/Run = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="Sprite"]
tree_root = SubResource( 10 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.19054, -2.97638 )
scale = Vector2( 1.3, 1.3 )
shape = SubResource( 1 )

[node name="qAttack" type="Area2D" parent="." groups=[
"1dmg2",
"Sword",
]]
position = Vector2( 0.86441, 0 )

[node name="qAttack" type="CollisionPolygon2D" parent="qAttack"]
build_mode = 1
polygon = PoolVector2Array( -9.59801, -58.5081, 80.0502, -50.9971, 111.791, -23.618, 78.1119, 13.2105, 20.9327, 15.6805, 20.6368, -7.10059, 12.3528, -26.0355, 0.831833, -28.6954 )
disabled = true

[node name="pAttack" type="Area2D" parent="." groups=[
"5dmg2",
]]

[node name="pAttack" type="CollisionPolygon2D" parent="pAttack"]
position = Vector2( 0.86441, 0 )
scale = Vector2( 1.3, 1.3 )
polygon = PoolVector2Array( 58.6432, -29.272, 35.5061, -27.5305, 21.3253, -10.8618, -12.012, -17.579, -17.9829, -6.13487, 26.301, 17.251, 84.7657, 5.80685, 93.4732, -12.1057, 75.3118, -27.2817 )
disabled = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
